--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-light_blue"></i>Cyber Security Analyst</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-light_blue"></i>Tucson, AZ</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-light_blue"></i>aaronjauregui9@gmail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-light_blue"></i>5204494271</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Cyber Security Analyst</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Tucson, AZ</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>aaronjauregui9@gmail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>5204494271</p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
