--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
           <p>English</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%">100%</div>
+            <div class="w3-round-xlarge w3-center w3-teal" style="height:24px;width:100%">100%</div>
           </div>
           <p>Spanish</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%">90%</div>
+            <div class="w3-round-xlarge w3-center w3-teal" style="height:24px;width:95%">95%</div>
           </div>
           <br>
         </div>
@@ -80,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>HVAC Technician</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2020 - 23<span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2020 - 23</h6>
           <p>Here in Arizona Air conditioning and refrigeration is highly demanded because of our heat. My dad will ask for me to tag along and help, and during this time I get the oppertunity to learn about mechanical systems are their inner workings aswell as the customer service side of things.</p>
           <hr>
         </div>
@@ -93,7 +93,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Git</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2023</h6>
-          <p>Git is like a super-smart assistant for teams working on projects, keeping track of all the changes everyone makes to the project files. It's a game-changer because it helps avoid chaos, allows easy teamwork, and lets you test out new ideas without messing up the main project. </p><br>
+          <p>Git helps avoid chaos, allows easy teamwork, and lets you test out new ideas without messing up the main project. </p><br>
         </div>
       </div>
 
