--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
 </head>
-<body class="w3-text-teal">
+<body class="w3-blue-gray">
 
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
-
   <!-- The Grid -->
   <div class="w3-row-padding">
-  
     <!-- Left Column -->
-    <div class="w3-third">
+    <div class="w3-quarter w3-white">
     
       <div class="w3-text-black w3-text-white w3-card-4">
         <div class="w3-display-container">
@@ -56,7 +54,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
           </div>
           <br>
-
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
           <p>English</p>
           <div class="w3-light-grey w3-round-xlarge">
@@ -81,13 +78,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>HVAC Technician</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2020 - 23</h6>
-          <p>Here in Arizona Air conditioning and refrigeration is highly demanded because of our heat. My dad will ask for me to tag along and help, and during this time I get the oppertunity to learn about mechanical systems are their inner workings aswell as the customer service side of things.</p>
+          <p>Here in Arizona Air conditioning and refrigeration is highly demanded because of our heat. My dad will ask for me to tag along and help, and during this time I get the opportunity to learn about mechanical systems are their inner workings aswell as the customer service side of things.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Highschool Summer Career Readiness Bootcamp</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Summer 2020</h6>
-          <p>In highschool I took a class every semester to become an atheletic trainer or someone who tends to atheletes injuries recoveries etc. This summer they were offering a Career Ready Bootcamp where at the end there would be an expedition to Pima Medical Institute(PMI) and have mock interviews.</p>
+          <p>In highschool I took a class every semester to earn college credits and become an athletic trainer or someone who tends to atheletes injuries recoveries etc. This summer they were offering a Career Ready Bootcamp where at the end there would be an expedition to Pima Medical Institute and have mock interviews.</p>
           <hr>
         </div>
         <div class="w3-container">
@@ -117,13 +114,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Highschool Diploma</p><br>
         </div>
       </div>
-
     <!-- End Right Column -->
     </div>
-    
   <!-- End Grid -->
   </div>
-  
   <!-- End Page Container -->
 </div>
 
